clusters/homelab-flex-a1/base/traefik/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard
    namespace: default
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`traefik.frankoslaw.top`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
          kind: Rule
          services:
              - name: api@internal
                kind: TraefikService
    tls:
        certResolver: letsencrypt-prod
        domains:
            - main: traefik.frankoslaw.top
        secretName: traefik.frankoslaw.top
